# GitHubAnalyzer

./: .env.example  .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
src/analysis/: mod.rs  pipeline.rs  rating_engine.rs  skill_extractor.rs
src/github/: client.rs  mod.rs  paginator.rs  rate_limiter.rs
src/llm/: batcher.rs  claude.rs  mod.rs  parser.rs  prompts.rs  provider.rs
src/models/: analysis.rs  commit.rs  mod.rs  skill.rs  user.rs
src/storage/: mod.rs  sqlite.rs
src/taxonomy/: languages.rs  mod.rs
